Chỉ chaạy được với Java 17, Spring boot 3.0.6, gradle 8.1.1